# Vanni-codex-hackathon

./: .env.example  .gitignore  AGENTS.md  BUILD_LOG.md  PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  drizzle.config.ts  package.json
apps/api/drizzle/: 0000_chunky_chat.sql
apps/api/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: index.ts
apps/api/src/db/: index.ts
apps/api/src/db/schema/: _schema.ts  agents.ts  api-keys.ts  auth.ts  calls.ts  credits.ts  events.ts  index.ts
apps/api/src/lib/: api-keys.ts  auth.ts  config-resolver.ts  credits.ts  dispatch.ts  redis.ts
apps/api/src/mcp/: context.ts  server.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: agents.ts  analytics.ts  api-keys.ts  calls.ts  credits.ts  internal.ts
apps/docs/mcp/: quickstart.md
apps/voice-engine/: pyproject.toml
apps/voice-engine/src/engine/: __init__.py  config.py  contract.py  main.py  metrics.py  tools.py  variables.py
apps/voice-engine/src/engine/bots/: __init__.py  base.py  flow.py
apps/voice-engine/src/engine/flows/: __init__.py  actions.py  loader.py
apps/voice-engine/src/engine/services/: __init__.py  llm.py  qa_analyzer.py  stt.py  tts.py
apps/voice-engine/src/engine/static/: index.html
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/forgot/: page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/(overview)/: page.tsx
apps/web/src/app/(dashboard)/agents/: page.tsx
apps/web/src/app/(dashboard)/analytics/: page.tsx
apps/web/src/app/(dashboard)/automation/: page.tsx
apps/web/src/app/(dashboard)/billing/: page.tsx
apps/web/src/app/(dashboard)/campaigns/: page.tsx
apps/web/src/app/(dashboard)/composer/: page.tsx
apps/web/src/app/(dashboard)/history/: page.tsx
apps/web/src/app/(dashboard)/knowledge-base/: page.tsx
apps/web/src/components/agents/: agent-builder.tsx  test-console.tsx
apps/web/src/components/analytics/: analytics-view.tsx
apps/web/src/components/calls/: call-detail.tsx  history-view.tsx
apps/web/src/components/composer/: composer-chat.tsx  composer-panel.tsx
apps/web/src/components/flow/: edge-inspector.tsx  flow-context.tsx  flow-designer.tsx  flow-fields.tsx  flow-nodes.tsx  flow-test-panel.tsx  flow-test-setup-dialog.tsx  global-settings-dialog.tsx  node-inspector.tsx  resizable-split.tsx  transition-editor.tsx
apps/web/src/components/settings/: api-keys-manager.tsx
apps/web/src/components/shared/: provider-icon.tsx  status-chip.tsx
apps/web/src/components/shell/: command-palette.tsx  page-header.tsx  sidebar.tsx  topbar.tsx
apps/web/src/hooks/: use-flow-editor.ts  use-flow-persistence.ts  use-flow-testing.ts  use-flow-validation.ts  use-media-query.ts
apps/web/src/lib/: api-client.ts  api.ts  auth-client.ts  flow-contract.ts  flow-layout.ts  flow-templates.ts  flow-transform.ts  format.ts  llm-catalog.ts  mock-data.ts  realtime-catalog.ts  server-api.ts  stt-catalog.ts  tts-catalog.ts  voice-catalog.ts
apps/web/src/types/: global.d.ts  index.ts
(+36 files in other folders)
