[project]
name = "vaani-voice-engine"
version = "0.1.0"
description = "Vaani voice pipeline service — one Pipecat pipeline per call"
requires-python = ">=3.12"
dependencies = [
    # Pipecat core + provider extras. Flows stays a SEPARATE package (see below);
    # we do not assume it was merged into core. Pin verified against the local hub.
    "pipecat-ai[deepgram,openai,groq,anthropic,google,assemblyai,elevenlabs,azure,cartesia,silero,webrtc]>=1.1.0,<2.0.0",
    "pipecat-ai-small-webrtc-prebuilt>=0.0.4",
    # Flows: imported as `pipecat_flows`. Wrapped behind engine/flows adapter so a
    # future core-merge is a one-file change.
    "pipecat-ai-flows>=1.1.0,<2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    "loguru>=0.7.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
rag = [
    "qdrant-client>=1.12.0",
    "fastembed>=0.5.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
